@startuml class_diagram
' PMS - Domain model overview.
' Essential business entities grouped by domain. Source of truth: schema.sql.

skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam classBackgroundColor #FAFAFA
skinparam classBorderColor #555555
skinparam packageStyle rectangle
skinparam packageBackgroundColor #F4F8FB
skinparam packageBorderColor #1F4E79
skinparam packageFontColor #1F4E79
skinparam defaultFontName Helvetica
hide circle
hide empty members

package "Security" {
  class User {
    email
    active
    firstLogin
  }
  class Role {
    name
  }
  class Permission {
    code
    module
  }
  User "*" -- "1" Role
  Role "*" -- "*" Permission
}

package "Project" {
  class Project {
    code
    name
    budget
    status
    startDate
    endDate
  }
  class Resource {
    dailyRate
    tccRate
  }
  class TccAnnuel {
    year
    annualCost
  }
  Resource "1" -- "*" TccAnnuel
}

package "Workload" {
  class PlanCharge {
    month
    plannedDays
  }
  class ChargeReelle {
    month
    realDays
    source
  }
}

package "Financial" {
  class JalonFacturation {
    percent
    amount
    status
  }
  class Mission {
    totalCost
  }
}

package "Reporting" {
  class KpiSnapshot {
    month
    eac
    marginEac
  }
}

' --- Cross-domain relations ---
Resource "0..1" --> "1" User : may be
Project "*" --> "1" User : director

Project "1" --> "*" PlanCharge
PlanCharge "*" --> "1" User
Project "1" --> "*" ChargeReelle
ChargeReelle "*" --> "1" User

Project "1" --> "*" JalonFacturation
Project "1" --> "*" Mission
Project "1" --> "*" KpiSnapshot

@enduml
